--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.29.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
