--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-crypto": "~12.8.1",
     "expo-dev-client": "~3.3.8",
     "expo-font": "~11.10.3",
+    "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
