--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-video": "^5.2.1",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
